<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mvazquez.formulariodatos.ConfirmaDatos"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirma_datos"
        android:textStyle="bold"
        android:textSize="@dimen/encabezado_confirma"/>
    <TextView
        android:id="@+id/tvNombreC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/formulario_nombre"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/margen_izquierda"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirma_fecha"
            android:textStyle="bold"/>
            <TextView
            android:id="@+id/tvFechaC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formulario_fecha"
            android:layout_marginLeft="@dimen/margen_izquierda"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirma_telefono"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvTelefonoC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formulario_telefono"
            android:layout_marginLeft="@dimen/margen_izquierda"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirma_email"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvEmailC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formulario_email"
            android:layout_marginLeft="@dimen/margen_izquierda"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirma_descripcion"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvDescripcionConf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formulario_descripcionc"
            android:layout_marginLeft="@dimen/margen_izquierda"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:text="Editar Datos"
        />
</LinearLayout>
